--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=YESER_SABILLON_TEST; Trusted_Connection=True;"
+    "DefaultConnection": "Server=.; Database=YESER_SABILLON_TEST;Encrypt=True;TrustServerCertificate=True; Trusted_Connection=True;"
   }
 }
